--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,33 @@
-/* 자사체를 web폰트로 사용시 폰트를 가져와야 하므로 선언 */
-/* @font-face {
-  font-family: 'HG';
-  font-style: bold;
-  font-weight: 800;
-  src: url(../fonts/HGGGothicssi_Pro_80g.eot);
-  src: url(../fonts/HGGGothicssi_Pro_80g.eot?#iefix) format('embedded-opentype'),
-      url(../fonts/HGGGothicssi_Pro_80g.woff) format('woff'),
-      url(../fonts/HGGGothicssi_Pro_80g.ttf) format('truetype');
-} */
+@font-face {
+  font-family: 'Pretendard';
+  font-style: normal;
+  font-weight: 400;
+  src: url(./assets/fonts/Pretendard-Regular.eot);
+  src: url(./assets/fonts/Pretendard-Regular.eot?#iefix)
+      format('embedded-opentype'),
+    url(./assets/fonts/Pretendard-Regular.woff) format('woff'),
+    url(./assets/fonts/Pretendard-Regular.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Pretendard';
+  font-style: normal;
+  font-weight: 500;
+  src: url(./assets/fonts/Pretendard-Medium.eot);
+  src: url(./assets/fonts/Pretendard-Medium.eot?#iefix)
+      format('embedded-opentype'),
+    url(./assets/fonts/Pretendard-Medium.woff) format('woff'),
+    url(./assets/fonts/Pretendard-Medium.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Pretendard';
+  font-style: normal;
+  font-weight: 700;
+  src: url(./assets/fonts/Pretendard-Bold.eot);
+  src: url(./assets/fonts/Pretendard-Bold.eot?#iefix)
+      format('embedded-opentype'),
+    url(./assets/fonts/Pretendard-Bold.woff) format('woff'),
+    url(./assets/fonts/Pretendard-Bold.ttf) format('truetype');
+}
 
 /* 반응형, 모바일에서 모든요소의 패딩,선을 크기안에 포함시킴 */
 *,
@@ -16,14 +36,13 @@
   box-sizing: border-box;
 }
 
-/* 컬러 변수,,, 명명규칙 : --로 시작해야 함*/
-/* :root -> html태그를 의미한다 */
+/* 컬러 변수 */
 :root {
-  --point-color1: #149f5c;
+  --point-color1: #b83030;
   --point-color2: #009223;
-  --txt-color-400: #919191;
-  --txt-color-500: #666;
-  --txt-color-600: #333;
+  --txt-color-400: #ddd;
+  --txt-color-500: #333;
+  --txt-color-600: #000;
 }
 
 /* rem단위사용시 주석풀고 사용 */
@@ -94,6 +113,7 @@ video {
   margin: 0;
   padding: 0;
 }
+
 /* html5추가 시멘틱엘리먼트를 익스하위버전에서 블럭으로 인식되도록함 */
 article,
 aside,
@@ -216,14 +236,10 @@ select,
 textarea,
 button,
 table {
-  /* 한글과 영문폰트가 비슷하며 한글,영문이 매우 많이 섞여있을경우 사용 */
-  font-family: 'Noto Sans KR', '맑은 고딕', 'malgun gothic',
-    'Apple SD Gothic Neo', sans-serif;
-  /* font-size: 2rem;  */
-  font-size: 18px;
+  font-family: 'Pretendard', '맑은 고딕', 'malgun gothic', 'Apple SD Gothic Neo',
+    sans-serif;
+  font-size: 16px;
   color: var(--txt-color-500);
-  /* 피그마에서 본문 줄간격이 모두 150%인 경우 */
-  letter-spacing: -0.03em;
 }
 
 /* 스킵 네비 */
@@ -248,12 +264,11 @@ table {
 
 /* 스크롤바 */
 /* ::-webkit-scrollbar {
-  width: 10px;
+  width: 10px; 
   background: #eee;
 }
 ::-webkit-scrollbar-thumb {
   background: #999;
-  /* border-radius: 8px; 
 } */
 
 /* 스크롤바 안보이게 */
@@ -264,7 +279,7 @@ table {
 }
 ::-webkit-scrollbar {
   display: none;
-}
+} */
 
 /* 텍스트 선택 컬러 */
 /* ::selection {
@@ -278,13 +293,13 @@ caption,
 .blind {
   /* 제자리에서 띄워 다른내용에 영향 안가게 */
   position: absolute;
-  /* 넘친 내용을 가려줌 */
+  /* 넘친내용을 가려줌 */
   overflow: hidden;
   /* 선도 가려줌 */
   clip: rect(0 0 0 0);
-  /* 원래 위치로 이동하기 위해 */
+  /* 원래위치로 이동 */
   margin: -1px;
-  /* 0이면 스크린 리더에서 글자를 읽지 않으므로 */
+  /* 0이면 스크린리더에서 글자 읽지않으므로 */
   width: 1px;
   height: 1px;
 }
@@ -364,10 +379,10 @@ input[type='checkbox']:checked + label::after {
   content: '';
   position: absolute;
   left: 1px;
-  top: 4px;
-  width: 24px;
-  height: 24px;
-  background: url(../images/common/checked.svg) no-repeat 0 0 / 18px;
+  top: 2px;
+  width: 20px;
+  height: 20px;
+  background: url(./assets/images/check.svg) no-repeat 0 0 / 18px;
 }
 
 /* radio 공통 */
@@ -527,20 +542,18 @@ textarea {
   background: #e8e8e8;
 }
 
-/* 버튼 --> 스타일에 맞게 수정해서 사용해야 함 */
+/* 버튼 */
 .btn {
   border: 1px solid #666;
   color: var(--txt-color-600);
-  /* 버튼디자인에 아이콘이 포함된 경우, 글자와 아이콘의 높이가 다르면 
-    inline-flex를 이용하여 좌우배치하고  align-itmes로 수직정렬해줌 */
+  /* 버튼디자인에 아이콘이 포함된 경우
+  글자와 아이콘의 높이가 다르면 inline-flex이용하여 버튼을 좌우배치하고 align-items로 수직정렬해줌 */
   display: inline-flex;
   align-items: center;
+  justify-content: center;
   height: 50px;
   padding: 0 15px;
-  font-size: 16px;
-  /* border-radius: 35px; */
   background: none;
-  justify-content: center;
 }
 
 /* 라벨 버튼 */
